Updated mockito and byte-buddy
Signed-off-by: Owais Kazi <owaiskazi19@gmail.com>