@@ -98,9 +98,6 @@ tasks.withType(Test) {
     systemProperty "file.encoding", "UTF-8"
     jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
     jvmArgs("--add-opens", "java.base/java.util.stream=ALL-UNNAMED")
-    jvmArgs("--add-opens", "jdk.unsupported/sun.misc=ALL-UNNAMED")
-    jvmArgs("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED")
-    jvmArgs("--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED")
 
     // PowerMock related tests like SearchFeatureDaoTests relies on modifying the bytecode of
     // classes during runtime, which can conflict with the module system introduced in Java 9.
@@ -177,10 +174,10 @@ dependencies {
 
     testImplementation 'org.awaitility:awaitility:4.3.0'
     testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
-    testImplementation 'org.mockito:mockito-core:5.14.2'
+    testImplementation 'org.mockito:mockito-core:5.20.0'
     testImplementation 'org.objenesis:objenesis:3.4'
-    testImplementation 'net.bytebuddy:byte-buddy:1.15.10'
-    testImplementation 'net.bytebuddy:byte-buddy-agent:1.15.10'
+    testImplementation 'net.bytebuddy:byte-buddy:1.17.7'
+    testImplementation 'net.bytebuddy:byte-buddy-agent:1.17.7'
     testCompileOnly 'org.apiguardian:apiguardian-api:1.1.2'
     // jupiter is required to run unit tests not inherited from OpenSearchTestCase (e.g., PreviousValueImputerTests)
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.2'
@@ -264,10 +261,10 @@ configurations.all {
         force "org.apache.httpcomponents.core5:httpcore5:${versions.httpcore5}"
         force "org.apache.httpcomponents.client5:httpclient5:${versions.httpclient5}"
 
-        force "org.mockito:mockito-core:5.14.2"
+        force "org.mockito:mockito-core:5.20.0"
         force "org.objenesis:objenesis:3.4"
-        force "net.bytebuddy:byte-buddy:1.15.10"
-        force "net.bytebuddy:byte-buddy-agent:1.15.10"
+        force "net.bytebuddy:byte-buddy:1.17.7"
+        force "net.bytebuddy:byte-buddy-agent:1.17.7"
         force "com.google.code.gson:gson:2.11.0"
         force "junit:junit:4.13.2"
 
@@ -483,7 +480,7 @@ testClusters.integTest {
     // Cluster shrink exception thrown if we try to set numberOfNodes to 1, so only apply if > 1
     if (_numNodes > 1) numberOfNodes = _numNodes
     configureClusterPlugins(delegate, jobSchedulerFile, securityPluginFile, securityEnabled)
-    nodes.each { it.jvmArgs("-Xms1g", "-Xmx1g", "--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED", "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED", "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED") }
+    nodes.each { it.jvmArgs("-Xms1g", "-Xmx1g") }
 }
 
 testClusters {
